prevent overflow

--- a/src/globals/index.css
+++ b/src/globals/index.css
@@ -5,3 +5,7 @@
 @import '/src/components/button.scss';
 @import '/src/components/title.scss';
 @import '/src/components/scrollbar.scss';
+
+html {
+  @apply overflow-x-hidden;
+}
